# faster-parser

./: .gitignore  CMakeLists.txt  LICENSE  README.md
benchmarks/: CMakeLists.txt  float_parser_benchmark.cpp  prepare_i9_12900k.sh  prepare_ultra7_265.sh
benchmarks/faster_parser/binance/: future_benchmark.cpp  future_benchmark_comparison.cpp
benchmarks/faster_parser/core/: float_parser_benchmark.cpp
cmake/: Dependencies.cmake
src/: parsers.cpp  parsers.h
src/faster_parser/binance/: concepts.h  future.h
src/faster_parser/binance/avx2/: agg_trade_avx2.h  book_ticker_avx2.h  utils_avx2.h
src/faster_parser/binance/avx512/: adaptive_dispatch.h  agg_trade_avx512.h  book_ticker_avx512.h  utils_avx512.h
src/faster_parser/binance/neon/: agg_trade_neon.h  book_ticker_neon.h  utils_neon.h
src/faster_parser/binance/scalar/: agg_trade_scalar.h  book_ticker_scalar.h  utils_scalar.h
src/faster_parser/binance/types/: agg_trade.h  book_ticker.h  level_data.h  ticker.h  trade.h
src/faster_parser/core/: fast_scalar_parser.cpp  fast_scalar_parser.h
src/faster_parser/core/avx2/: float_parser_avx2.cpp  float_parser_avx2.h
src/faster_parser/core/avx512/: float_parser_avx512.cpp  float_parser_avx512.h
src/faster_parser/core/neon/: float_parser_neon.cpp  float_parser_neon.h
src/faster_parser/core/scalar/: float_parser_scalar.cpp  float_parser_scalar.h
src/faster_parser/core/sse42/: float_parser_sse42.cpp  float_parser_sse42.h
tests/: CMakeLists.txt  fast_float_parser_tests.cpp
tests/faster_parser/binance/: future_tests.cpp
tests/faster_parser/core/: float_parser_tests.cpp
